2012-05-28  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl-0.14.0/library/aes.c (FT0, FT1, FT2): Specify the
	section ".sys", so that we will have more room for flash ROM.

	* tool/gnuk_upgrade.py (main): First 4096-byte of Gnuk is system
	block.  Don't send it to reGNUal.

	* regnual/sys.c (entry): Fix clearing BSS.  It is called with all
	interrupts disabled.

	* regnual/regnual.ld (_flash_start): It's 0x08001000 now, because
	there is system block now (was: 0x08000000).

2012-05-26  Niibe Yutaka  <gniibe@fsij.org>

	* src/sys.c (reset): Set SCR->VCR here.

2012-05-25  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.ld.in (.sys): New section.

	* boards/OLIMEX_STM32_H103/board.h (SET_USB_CONDITION)
	(SET_LED_CONDITION, GPIO_LED, IOPORT_LED, FLASH_PAGE_SIZE): New.
	* boards/OLIMEX_STM32_H103/board.c (USB_Cable_Config, set_led):
	Remove.

	* boards/STM32_PRIMER2/board.h (SET_USB_CONDITION)
	(SET_LED_CONDITION, GPIO_LED, IOPORT_LED, FLASH_PAGE_SIZE): New.
	* boards/STM32_PRIMER2/board.c (USB_Cable_Config, set_led):
	Remove.

	* boards/FST_01_00/board.h (SET_USB_CONDITION)
	(SET_LED_CONDITION, GPIO_LED, IOPORT_LED, FLASH_PAGE_SIZE): New.
	* boards/FST_01_00/board.c (USB_Cable_Config, set_led): Remove.

	* boards/FST_01/board.h (SET_USB_CONDITION)
	(SET_LED_CONDITION, GPIO_LED, IOPORT_LED, FLASH_PAGE_SIZE): New.
	* boards/FST_01/board.c (USB_Cable_Config, set_led): Remove.

	* regnual/sys-stm8s-discovery.h, sys-stbee.h: Remove.

	* boards/STM8S_DISCOVERY/board.h (SET_USB_CONDITION)
	(SET_LED_CONDITION, GPIO_LED, IOPORT_LED, FLASH_PAGE_SIZE): New.
	* boards/STM8S_DISCOVERY/board.c (USB_Cable_Config, set_led):
	Remove.

	* regnual/Makefile: Add -I ../src to CFLAGS.

	* regnual/regnual.ld (vector): New.

	* regnual/sys.c: Remove implementation, but jump to vector by sys.h.

	* src/Makefile.in: Follow change of files.

	* src/configure: Undo changes of 2012-05-22.

	* boards/common/hw_config.c: Remove.  Mov function to sys.c.
	* src/flash.c: Move functions to sys.c.